Renamed category project to projects

--- a/_posts/2020-10-08-this-page.md
+++ b/_posts/2020-10-08-this-page.md
@@ -2,7 +2,7 @@
 layout: post
 title: Building this page
 heading: Recursion
-categories: Project
+categories: Projects
 ---
 
 I'm building this page myself, this is not a wordpress template. I consider my self a minimalist, this regards belongings, wording and coding. Why do I need thousands of lines of php and javascript and a template, if all I would do with it is display some really simple text and images?  
