--- a/_posts/2020-12-05-bdd.md
+++ b/_posts/2020-12-05-bdd.md
@@ -2,7 +2,7 @@
 layout: post
 title: TDD to BDD - Principles and Tools with an Impact on Business Value and Communications
 heading: Behavior-Driven Development
-categories: [Agile, Project]
+categories: [Agile, Projects]
 ---
 For the module "Agile Procedure Models" at my university, I write an essay about BDDs origin, principles, advantages, evaluation and how to approach it. Since we need to hand in a PDF version and a markdown version, I decided to go the extra mile and have a always up-to-date version of it hosted as Github Pages website here: **[bdd.guru](https://bdd.guru)**,  
 so that I can receive early feedback from other readers and the professor. Please send me a mail (robert.nickel@aikq.de) if you have any feedback for me.  
