--- a/_posts/2018-03-26-welcome.md
+++ b/_posts/2018-03-26-welcome.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Hello World!
-heading: Welcome
 categories: Personal
+image: /assets/images/hello.jpeg
 ---
 
 
@@ -22,4 +22,4 @@ For the bachelor thesis I wrote a more theoretical text with the title: "Analysi
 Software Testing Methods and Structures for Game Balancing". After the thesis and some more subjects were I learned about 3D Modelling, Design Management and Usability Engineering, I was finally done, and could throw the mortarboard into the air. I did not really feel ready to work, and therefore had applied for a visa for Canada. I wanted to do work and travel or whatever all those cool young adults do nowadays. But the visa was rejected, so I was pretty depressed about that. After some more month I finally found, with the help of an old friend of mine, a promising job offering as Junior Software Engineer in a (connected) car related company called Daimler TSS in Ulm. Today I work for almost 2 years in this company, and even if I have deadlines and sometimes really a lot of time pressure, I really like the job, the company and my colleagues. I want to talk about my experiences
 as a "20% designer - 80% software developer" mutant in the world of software engineering. Have fun!
 
-UPDATE: I worked at Daimler TSS 2016-2020, now I am doing my [Masters Degree in Computer Science](/2020/10/28/masters-degree.html).
+UPDATE: I worked at Daimler TSS 2016-2020, now I am doing my [Masters Degree in Computer Science](/blog/masters-degree).
