Removed headings, improved Titles.

--- a/_posts/2020-12-05-bdd.md
+++ b/_posts/2020-12-05-bdd.md
@@ -1,7 +1,6 @@
 ---
 layout: post
-title: TDD to BDD - Principles and Tools with an Impact on Business Value and Communications
-heading: Behavior-Driven Development
+title: From TDD to BDD
 categories: [Agile, Projects]
 image: /assets/images/amigos.jpeg
 ---
