--- a/_posts/2018-03-26-welcome.md
+++ b/_posts/2018-03-26-welcome.md
@@ -23,3 +23,4 @@ Software Testing Methods and Structures for Game Balancing". After the thesis an
 as a "20% designer - 80% software developer" mutant in the world of software engineering. Have fun!
 
 UPDATE: I worked at Daimler TSS 2016-2020, now I am doing my [Masters Degree in Computer Science](/blog/masters-degree).
+UPDATE 2: I finished my Masters Degree in 2022 very successfully.
